--- a/portfolio.css
+++ b/portfolio.css
@@ -85,6 +85,7 @@ footer {
 .profile-img {
   width: 200px;
   height: 200px;
+  border: 5px ridge black;
   border-radius: 50%;
   border: 4px solid rgb(20, 163, 206);
   object-fit: cover;
